[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "skbro"
version = "0.3.0"
description = "A simple local CLI for creating, installing, sharing, and using AI skills."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/AuCf/skbro"
Repository = "https://github.com/AuCf/skbro.git"
Issues = "https://github.com/AuCf/skbro/issues"

[project.scripts]
skbro = "skm.cli:main"
skm = "skm.cli:main"
